@@ -1058,13 +1058,15 @@ namespace Orthanc
   ServerContext::CreateStorageCommitment(const std::string& jobId,
                                          const std::string& transactionUid,
                                          const std::vector<std::string>& sopClassUids,
-                                         const std::vector<std::string>& sopInstanceUids)
+                                         const std::vector<std::string>& sopInstanceUids,
+                                         const std::string& remoteAet,
+                                         const std::string& calledAet)
   {
 #if ORTHANC_ENABLE_PLUGINS == 1
     if (HasPlugins())
     {
-      // TODO
-      return NULL;
+      return GetPlugins().CreateStorageCommitment(
+        jobId, transactionUid, sopClassUids, sopInstanceUids, remoteAet, calledAet);
     }
 #endif
 
